# alpyca

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  package.xml
.ci_config/: dependencies.sh
alpyca/: CMakeLists.txt  package.xml
alpyca/scripts/comm/: README.md  alpyca_comm.py  example.py
alpyca_comm/: CMakeLists.txt  README.md  package.xml  setup.py
alpyca_comm/action/: Example.action
alpyca_comm/src/alpyca/comm/: communication.py  example.py
alpyca_launch/: CMakeLists.txt  README.md  package.xml  setup.py
alpyca_launch/launch/: example.launch
alpyca_launch/msg/: NodeState.msg  State.msg
alpyca_launch/src/alpyca/launch/: __init__.py  example.py  launch.py  launcher.py  master.py  node.py  param.py  parsing_exception.py  runner.py
alpyca_launch/srv/: StartStop.srv
alpyca_launch/test/: abort.py  basic.launch  basic.py  basic_sub.launch  test_arg.py  test_basic.py  test_env.py  test_if_unless.py  test_include.py  test_node.py  test_param.py  test_remap.py  test_rosparam.py  test_subst.py
alpyca_sim/: CMakeLists.txt  README.md  package.xml  setup.py
alpyca_sim/include/alpyca/sim/: contact_sensor_wrapper.h  plugin_runner.h  repeated.h
alpyca_sim/src/alpyca/sim/: contact_plugin.py  element.cpp  generate_sensors.py  msgs.cpp  plugin_runner.cpp  py_contact_sensor.cpp  py_sensor.cpp  sensor_binding.tmpl  sensor_wrapper.tmpl
alpyca_sim/worlds/: contact.world
docs/source/: conf.py  index.rst
include/alpyca/sim/: contact_sensor_wrapper.h  plugin_runner.h  sensor_wrapper.h
src/alpyca/comm/: __init__.py  example.py
src/alpyca/sim/: README.md  contact_plugin.py  custom_plugin.py  plugin_runner.cpp  py_contact_sensor.cpp  py_sensor.cpp
srv/: ExampleSrv.srv
tests/: test_dummy.py
