<?xml version="1.0"?>
<package>
  <name>alpyca</name>
  <version>0.0.1</version>
  <description>The main idea of Alpyca is to make robot development with ROS as easy as possible.</description>

  <maintainer email="boehle@gmail.com">Sebastian Boehle</maintainer>
  <author email="boehle@gmail.com">Artur Miller</author>
  <author email="boehle@gmail.com">Sebastian Boehle</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roslaunch</run_depend>
  <run_depend>std_msgs</run_depend>
  
</package>
