<?xml version="1.0"?>
<package format="2">
  <name>alpyca</name>
  <version>0.0.1</version>
  <description>The main idea of Alpyca is to make robot development with ROS as easy as possible.</description>

  <author email="boehle@gmail.com">Artur Miller</author>
  <author email="boehle@gmail.com">Sebastian Boehle</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>roslaunch</depend>
</package>
