<?xml version="1.0"?>
<package>
  <name>alpyca</name>
  <version>0.0.1</version>
  <description>The main idea of Alpyca is to make robot development with ROS as easy as possible.</description>

  <maintainer email="amiller89@gmail.com">Artur Miller</maintainer>
  <author email="amiller89@gmx.de">Artur Miller</author>
  <author email="boehle@gmail.com">Sebastian Boehle</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>alpyca_comm</run_depend>
  <run_depend>alpyca_sim</run_depend>

</package>
