<?xml version="1.0"?>
<package>
  <name>alpyca_comm</name>
  <version>0.0.1</version>
  <description>The main idea of Alpyca is to make robot development with ROS as easy as possible.</description>

  <maintainer email="boehle@gmail.com">Sebastian Boehle</maintainer>
  <author email="amiller89@gmx.de">Artur Miller</author>
  <author email="boehle@gmail.com">Sebastian Boehle</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roslaunch</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>

</package>
