<package format="2">
  <name>alpyca_comm</name>
  <version>0.0.1</version>
  <description>The main idea of Alpyca is to make robot development with ROS as easy as possible.</description>

  <maintainer email="boehle@gmail.com">Sebastian Boehle</maintainer>
  <author email="amiller89@gmx.de">Artur Miller</author>
  <author email="boehle@gmail.com">Sebastian Boehle</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roslaunch</exec_depend>

  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>actionlib</depend>

</package>
