<?xml version="1.0"?>
<package format="2">
  <name>alpyca_launch</name>
  <version>0.0.1</version>
  <description>ROS launch system based on python.</description>

  <maintainer email="amiller89@gmx.de">Sebastian Boehle</maintainer>
  <author email="amiller89@gmx.de">Artur Miller</author>
  <author email="boehle@gmail.com">Sebastian Boehle</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>std_msgs</depend>

</package>
