<?xml version="1.0"?>
<package>
  <name>alpyca_sim</name>
  <version>0.0.1</version>
  <description>The alpyca_sim package</description>

  <maintainer email="amiller89@gmx.de">amiller</maintainer>
  <author email="amiller89@gmx.de">Artur Miller</author>
  <author email="boehle@gmail.com">Sebastian Boehle</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pybind11_catkin</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>pybind11_catkin</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>

</package>

