<package format="2">
  <name>alpyca_sim</name>
  <version>0.0.1</version>
  <description>The alpyca_sim package</description>

  <maintainer email="amiller89@gmx.de">amiller</maintainer>
  <author email="amiller89@gmx.de">Artur Miller</author>
  <author email="boehle@gmail.com">Sebastian Boehle</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>roscpp</depend>
  <depend>pybind11_catkin</depend>

</package>

